--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
+    "eslint-utils": "^1.4.1",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^8.1.5",
     "vue-template-compiler": "^2.6.10"
